last features favorites

--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -26,6 +26,8 @@
           <option value="reasonableP">By reasonable price</option>
           <option value="recentlyR">By recently released</option>
         </select>
+        <input type="checkbox" id="favorites" name="favorites">
+        <label for="favorites">Favorite products </label>
         <div id="brand">
           <label for="brand-select">By brands:</label>
           <select name="brand" id="brand-select"> </select>
