--- a/client/v3/index.html
+++ b/client/v3/index.html
@@ -1,77 +1,90 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>👕 Clear Fashion | Environmentally & human-friendly clothes</title>
-  </head>
-  <body>
-    <h1>Clear fashion</h1>
-    <section id="options">
-      <div id="show">
-        <label for="show-select">Show:</label>
-        <select name="show" id="show-select">
-          <option value="12">12</option>
-          <option value="24">24</option>
-          <option value="48">48</option>
-        </select>
-      </div>
-      <div id="page">
-        <label for="page-select">Go to page:</label>
-        <select name="page" id="page-select"> </select>
-      </div>
-      <div id="filters">
-        <label for="filter-select">filters:</label>
-        <select name="filters" id="filter-select">
-          <option value="None">None</option>
-          <option value="reasonableP">By reasonable price</option>
-          <option value="recentlyR">By recently released</option>
-        </select>
-        <input type="checkbox" id="favorites" name="favorites">
-        <label for="favorites">Favorite products </label>
-        <div id="brand">
-          <label for="brand-select">By brands:</label>
-          <select name="brand" id="brand-select"> </select>
-        </div>
-      </div>
-      <div id="sort">
-        <label for="sort-select">Sort:</label>
-        <select name="sort" id="sort-select">
-          <option value="None">None</option>
-          <option value="price-asc">Cheaper</option>
-          <option value="price-desc">Expensive</option>
-          <option value="date-asc">Recently released</option>
-          <option value="date-desc">Anciently released</option>
-        </select>
-      </div>
-    </section>
-    <section id="indicators">
-      <h2>Indicators</h2>
-      <div>
-        <span>Number of products</span>
-        <span id="nbProducts">0</span>
-      </div>
-      <div>
-        <span>Number of new products</span>
-        <span id ="nbNewProcucts">0</span>
-      </div>
-      <div>
-        <span>p50 price value</span>
-        <span id ="p50">0</span>
-      </div>
-      <div>
-        <span>p90 price value</span>
-        <span id ="p90">0</span>
-      </div>
-      <div>
-        <span>p95 price value</span>
-        <span id ="p95">0</span>
-      </div>
-      <div>
-        <span>Last released date</span>
-        <span id = "lastRelease">2020-01-01</span>
-      </div>
-    </section>
-    <section id="products"></section>
-    <script type="text/javascript" charset="UTF-8" src="portfolio.js"></script>
-  </body>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Benjamin Project</title>
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css'><link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<section class="section-products">
+		<div class="container">
+				<div class="row justify-content-center text-center">
+						<div class="col-md-8 col-lg-6">
+								<div class="header">
+										<h3>Brands Products</h3>
+										<h2>Benjamin's Product List</h2>
+								</div>
+						</div>
+				</div>
+        <section id="options">
+          <div class="d-flex flex-row">
+            <div class="p-2">
+              <div id="show">
+                <label for="show-select">Show:</label>
+                <select name="show" id="show-select">
+                  <option value="12">12</option>
+                  <option value="24">24</option>
+                  <option value="48">48</option>
+                </select>
+              </div>
+            </div>
+            <div class="p-2">
+              <div id="page">
+                <label for="page-select">Go to page:</label>
+                <select name="page" id="page-select">
+                  <option value="0">1</option>
+                  <option value="1">2</option>
+                  <option value="2">3</option>
+                  <option value="3">4</option>
+                  <option value="4">5</option>
+                  <option value="5">6</option>
+                 </select>
+              </div>
+            </div>
+            <div class="p-2">
+              <div id="filters">
+                <label for="filter-select">filters:</label>
+                <select name="filters" id="filter-select">
+                  <option value="None">None</option>
+                  <option value="reasonableP">By reasonable price</option>
+                </select>
+              </div>
+            </div>
+            <div class="p-2">
+              <div id="brand">
+                <label for="brand-select">By brands:</label>
+                <select name="brand" id="brand-select"> 
+                  <option value="none">none</option>
+                  <option value="adresse">Adresse</option>
+                  <option value="dedicated">Dedicated</option>
+                  <option value="loom">Loom</option>
+                  <option value="montlimart">Montlimart</option>
+                </select>
+              </div>
+            </div>
+            <div class="p-2">
+              <div id="sort">
+                <label for="sort-select">Sort:</label>
+                <select name="sort" id="sort-select">
+                  <option value="None">None</option>
+                  <option value="price-asc">Cheaper</option>
+                  <option value="price-desc">Expensive</option>
+                </select>
+              </div>
+            </div>
+          </div>
+          <div class="p-2">
+            <input type="checkbox" id="favorites" name="favorites">
+            <label for="favorites">Favorite products </label>
+          </div>
+          <div class="porductlist"></div>
+        </section>
+			</div>
+		</div>
+</section>
+<script type="text/javascript" charset="UTF-8" src="portfolio.js"></script>
+</body>
 </html>
